--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+---
+title: "The best post ever"
+date: 2018-06-25
+---
+
 title: The best GitHub Pages site ever
 author: EC
 email: your-email@domain.com
